--- a/_resources/1.md
+++ b/_resources/1.md
@@ -1,4 +1,4 @@
 ---
-link: https://docs.google.com/document/d/1mCkyUDDg3cBNqu79266P3woh9NWQ6ot8AZKWYAjWTaI/edit?usp=sharing
+link: /observatory
 title: Observatory Photographs
 ---
