--- a/_resources/2.md
+++ b/_resources/2.md
@@ -1,4 +1,4 @@
 ---
-link: https://drive.google.com/drive/folders/1F9RBzVQRmNh8LXwnyuCQbQQKqdYHSl69?usp=sharing
-title: Past Work
+link: /past
+title: Club's Past
 ---
