update gallery photos

--- a/_gallery/8.md
+++ b/_gallery/8.md
@@ -1,4 +1,4 @@
 ---
-image_path: /assets/img/gallery8.jpg
-title: Astrophotography
+image_path: /assets/img/gallery/8.jpg
+title: Venus Transit
 ---
