--- a/_posts/2021-08-15-starship.md
+++ b/_posts/2021-08-15-starship.md
@@ -9,7 +9,7 @@ tags: [spacex, rocket, elon-musk, space, nasa]
 
 Welcome to the 21st-century space race, one that could potentially lead to 10-minute space vacations, orbiting space hotels, and humans on Mars. Now, instead of warring superpowers battling for dominance in orbit, private companies are competing to make space travel easier and more affordable. In recent days, SpaceX has been focussing on developing Starship rockets at an unprecedented rate. Starship is SpaceX’s attempt to create the largest rocket in history, bigger even than NASA’s Saturn V that took astronauts to the Moon. The goal is to use the 50-meter-tall steel vehicle to one day take humans to Mars, with up to 100 people on each launch.
 
-<img src="{{ site.baseurl }}/assets/img/blogs/starship/1.png">
+<img loading="lazy" src="{{ site.baseurl }}/assets/img/blogs/starship/1.png">
 
 ## Vision
 
@@ -21,27 +21,28 @@ Starship is designed to deliver satellites further and at a lower marginal cost 
 ## Fact file
 
 - It will be the largest and most powerful rocket ever built.
-Unique capabilities :
+  Unique capabilities :
+
 1. In space refueling
 2. Fully reusable due to integrated reentry and landing.
 3. Spacious crew cabin.
 
 - Standing roughly 400 feet in height, the SpaceX rocket dwarfs any previous launch system. Taken together with the orbital launch on which it stands, the whole thing is about 475 feet high, which is taller than the Great Pyramid of Giza!
 - The main engines on Apollo’s famous Saturn V delivered some 35 meganewtons of force off the pad. The SpaceX Heavy booster should achieve around 70 meganewtons.
-- With 29 Raptor engines installed, the super heavy booster 4 technically has more thrust potential than any other rocket booster in history. 
+- With 29 Raptor engines installed, the super heavy booster 4 technically has more thrust potential than any other rocket booster in history.
 - SpaceX’s Starship is currently at 378 seconds of specific impulse and targets over 380 seconds, those are certainly some awe-inspiring numbers!
 
-<img src="{{ site.baseurl }}/assets/img/blogs/starship/2.png">
+<img loading="lazy" src="{{ site.baseurl }}/assets/img/blogs/starship/2.png">
 
 ## Recent Developments
 
-On May 5, 2021, the SN15 (short form for Starship Serial Number 15 prototype) successfully  landed in the 5th high altitude test flight after soaring up to an altitude of 10 km . The four previous prototypes of the Starship had failed to land safely and were destroyed in the process or soon after touchdown. This successful landing was a major achievement as SpaceX was finally ready to test the Starship for orbital flight, literally opening up new horizons for the Starship!
-Fast forward to August 3, 2021, in just under 3 months SpaceX rolled out its first complete Super Heavy Booster,  known as Booster 4, from it’s assembly facility in South Texas a few kilometers down the road to its launch site and the very next day, August 4, 2021, the booster was standing tall on the launch stand and currently is being prepared to be mounted with the SN20, the latest prototype version of Starship. Once the preparations are complete, the entire 400ft tall rocket will go ahead for its first orbital test flight in which the Booster 4 will splash down in the Gulf of Mexico a few minutes after liftoff. SpaceX plans to “catch” the booster using an arm on the launch tower(on subsequent flights) instead of trying to land it like the falcons, as it is a lot easier and safer. After being separated from the booster, SN20 will power itself to orbit, make one lap around Earth, in about 90 minutes, then come down and hopefully land safely in the Pacific Ocean, near the Hawaiian island of Kauai.
+On May 5, 2021, the SN15 (short form for Starship Serial Number 15 prototype) successfully landed in the 5th high altitude test flight after soaring up to an altitude of 10 km . The four previous prototypes of the Starship had failed to land safely and were destroyed in the process or soon after touchdown. This successful landing was a major achievement as SpaceX was finally ready to test the Starship for orbital flight, literally opening up new horizons for the Starship!
+Fast forward to August 3, 2021, in just under 3 months SpaceX rolled out its first complete Super Heavy Booster, known as Booster 4, from it’s assembly facility in South Texas a few kilometers down the road to its launch site and the very next day, August 4, 2021, the booster was standing tall on the launch stand and currently is being prepared to be mounted with the SN20, the latest prototype version of Starship. Once the preparations are complete, the entire 400ft tall rocket will go ahead for its first orbital test flight in which the Booster 4 will splash down in the Gulf of Mexico a few minutes after liftoff. SpaceX plans to “catch” the booster using an arm on the launch tower(on subsequent flights) instead of trying to land it like the falcons, as it is a lot easier and safer. After being separated from the booster, SN20 will power itself to orbit, make one lap around Earth, in about 90 minutes, then come down and hopefully land safely in the Pacific Ocean, near the Hawaiian island of Kauai.
 
 ## Future goals
 
 SpaceX wants to go through with the mission in the next few months. But the U.S. The Federal Aviation Administration (FAA) is conducting a variety of checks necessary for legal clearance. SN20 won’t launch until they have a licence from the administration. And there are some logistics to deal with too.So, the maiden orbital outing is still some way off. Till then fasten your seat belts to witness the amazing launch of the most powerful rocket!
 
-<img src="{{ site.baseurl }}/assets/img/blogs/starship/3.png" width="100%">
+<img loading="lazy" src="{{ site.baseurl }}/assets/img/blogs/starship/3.png" width="100%">
 
-<!-- <img src="{{ site.baseurl }}/assets/img/blogs/starship/4.png"> -->
+<!-- <img loading="lazy" src="{{ site.baseurl }}/assets/img/blogs/starship/4.png"> -->
