--- a/_gallery/10.md
+++ b/_gallery/10.md
@@ -1,4 +1,4 @@
 ---
-image_path: assets/img/gallery/IMG_9891.JPG
-title: Secies 2023-24
+image_path: assets/img/gallery/13.JPG
+title: Team 2023-24
 ---
