added ad-op blog resouces

--- a/_posts/2023-12-09-abshp.md
+++ b/_posts/2023-12-09-abshp.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: AbsHp
+title: Adaptive Optics
 subtitle: Article by Abhinav Singhal
-cover-img: /assets/img/blogs/chandrayaan-3/cover.png
-thumbnail-img: /assets/img/blogs/chandrayaan-3/thumbnail.jpg
-share-img: /assets/img/blogs/chandrayaan-3/thumbnail.jpg
-tags: [isro, chandrayaan, pragyan, moon, vikram]
+cover-img: /assets/img/blogs/adaptive-optics/cover.jpg
+thumbnail-img: /assets/img/blogs/adaptive-optics/thumbnail.jpg
+share-img: /assets/img/blogs/adaptive-optics/thumbnail.jpg
+tags: [optics]
 ---
+
+Adaptive optics (AO) is a technique of precisely deforming a mirror in order to compensate for light distortion. It is used in astronomical telescopes and laser communication systems to remove the effects of atmospheric distortion, in microscopy, optical fabrication and in retinal imaging systems to reduce optical aberrations. Adaptive optics works by measuring the distortions in a wavefront and compensating for them with a device that corrects those errors such as a deformable mirror or a liquid crystal array.
